log
Fri 14 Oct 2022 10:13:01 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
6e1127c
Fri 14 Oct 2022 10:16:11 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|2
total_score: 20/70
d776f65
Fri 14 Oct 2022 10:27:27 PM UTC: 
 heap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:32:5: error: ‘capac’ undeclared (first use in this function)
   32 |     capac = (capac *2) +1;
      |     ^~~~~
heap.c:32:5: note: each undeclared identifier is reported only once for each function it appears in
heap.c:33:32: error: too few arguments to function ‘realloc’
   33 |     pq->heapArray = (heapElem*)realloc(capac*sizeof(heapElem));
      |                                ^~~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:14: note: declared here
  550 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
Compilation failed
b7566d2
Fri 14 Oct 2022 10:27:52 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:49: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   33 |     pq->heapArray = (heapElem*)realloc(pq->capac*sizeof(heapElem));
      |                                        ~~~~~~~~~^~~~~~~~~~~~~~~~~
      |                                                 |
      |                                                 long unsigned int
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:29: note: expected ‘void *’ but argument is of type ‘long unsigned int’
  550 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
In file included from test.c:4:
heap.c:33:32: error: too few arguments to function ‘realloc’
   33 |     pq->heapArray = (heapElem*)realloc(pq->capac*sizeof(heapElem));
      |                                ^~~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:14: note: declared here
  550 | extern void *realloc (void *__ptr, size_t __size)
      |              ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b45af78
Fri 14 Oct 2022 10:29:02 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:42: error: passing argument 1 of ‘realloc’ makes pointer from integer without a cast [-Werror=int-conversion]
   33 |     pq->heapArray = (heapElem*)realloc(pq->capac,sizeof(heapElem));
      |                                        ~~^~~~~~~
      |                                          |
      |                                          int
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:550:29: note: expected ‘void *’ but argument is of type ‘int’
  550 | extern void *realloc (void *__ptr, size_t __size)
      |                       ~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
b5ab075
Fri 14 Oct 2022 10:39:48 PM UTC: 
 heap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:50:13: error: incompatible types when initializing type ‘int’ using type ‘heapElem’ {aka ‘struct nodo’}
   50 |   int aux = pq->heapArray[1];
      |             ^~
heap.c:53:58: error: ‘priority’ undeclared (first use in this function); did you mean ‘prioridad’?
   53 |   while(aux <= pq->size && pq->heapArray[aux].priority > priority || aux+1 <= pq->size && pq->heapArray[aux+1].priority > priority)
      |                                                          ^~~~~~~~
      |                                                          prioridad
heap.c:53:58: note: each undeclared identifier is reported only once for each function it appears in
In file included from test.c:4:
heap.c:56:17: error: ‘size’ undeclared (first use in this function)
   56 |     if(aux+1 <= size && pq->heapArray[aux+1].priority > priority) aux++;
      |                 ^~~~
In file included from test.c:4:
heap.c:51:7: error: unused variable ‘prioridad’ [-Werror=unused-variable]
   51 |   int prioridad = pq->heapArray[0].priority;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8225a52
Fri 14 Oct 2022 10:40:03 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
fe902fd
